# BIC-mock-exchange-server

./: .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.mock.yml  pyproject.toml
docs/: case_study_request_collection.md  robot_messages_new.py
src/: config.py  main.py
src/docs/: note.md
src/generators/: entity_updates.py  images.py  timing.py
src/mq/: connection.py  consumer.py  heartbeat.py  log_producer.py  producer.py
src/scenarios/: failures.py  manager.py
src/schemas/: commands.py  protocol.py  results.py
src/simulators/: base.py  cc_simulator.py  cleanup_simulator.py  consolidation_simulator.py  evaporation_simulator.py  photo_simulator.py  setup_simulator.py
src/state/: __init__.py  preconditions.py  world_state.py
src/tests/: conftest.py  test_cleanup_simulator.py  test_consumer_integration.py  test_full_workflow.py  test_generators.py  test_heartbeat.py  test_labrun_message.py  test_log_producer.py  test_photo_device_state.py  test_photo_integration.py  test_preconditions.py  test_scenarios.py  test_schemas.py  test_simulator_integration.py  test_world_state.py
